# magma

./: CODEOWNERS  checkPyCoverageBazel.sh
.devcontainer/: Dockerfile
.devcontainer/bazel-base/: Dockerfile
.github/workflows/: agw-coverage.yml  agw-docker-load-test.yaml  agw-workflow.yml  ami-docker-workflow.yml  amis-workflow.yml  bazel-cache-push.yml  bazel.yml  build_all.yml  build_magma_dep.yml  cwf-integ-test.yml  gcc-problems.yml  lte-integ-test-bazel.yml  lte-integ-test.yml
bazel/: python_dependencies.bzl
bazel/patches/aioeventlet/: BUILD.bazel
bazel/python_utils/: coverage_decorator.py
bazel/scripts/: run_integ_tests.sh
experimental/bazel-base/: Dockerfile
experimental/cloudstrapper/playbooks/roles/docker-cleanup/tasks/: main.yaml
experimental/cloudstrapper/playbooks/roles/docker-cleanup/vars/: main.yaml
experimental/cloudstrapper/playbooks/roles/docker-infra/tasks/: provision-instance.yaml
experimental/cloudstrapper/playbooks/roles/docker-infra/vars/: main.yaml
experimental/cloudstrapper/playbooks/roles/docker-snapshot/tasks/: main.yaml
experimental/cloudstrapper/playbooks/roles/docker-snapshot/vars/: main.yaml
experimental/cloudstrapper/playbooks/roles/ghz-platform/tasks/: run-tests.yaml
feg/protos/: BUILD.bazel
lte/gateway/: Vagrantfile  fabfile.py
lte/gateway/configs/: pipelined.yml  pipelined.yml_prod
lte/gateway/deploy/: agw_install_docker.sh
lte/gateway/python/integ_tests/s1aptests/: s1ap_utils.py
lte/gateway/python/integ_tests/s1aptests/ovs/: BUILD.bazel  rest_api.py
lte/gateway/python/magma/mobilityd/: BUILD.bazel
lte/gateway/python/magma/mobilityd/scripts/: BUILD.bazel
lte/gateway/python/magma/mobilityd/tests/: BUILD.bazel
lte/gateway/python/magma/pipelined/: BUILD.bazel  gtp_stats_collector.py
lte/gateway/python/magma/pipelined/app/: BUILD.bazel  access_control.py
lte/gateway/python/magma/pipelined/ebpf/: BUILD.bazel
lte/gateway/python/magma/pipelined/ng_manager/: BUILD.bazel
lte/gateway/python/magma/pipelined/openflow/: BUILD.bazel  flows.py
lte/gateway/python/magma/pipelined/openflow/tests/: BUILD.bazel
lte/gateway/python/magma/pipelined/qos/: BUILD.bazel
lte/gateway/python/magma/pipelined/tests/: BUILD.bazel  test_access_control.py  test_gtp_stats_collector.py  test_internal_pkt_ipfix_export.py  test_ipv6_solicitation_5g.py
lte/gateway/python/magma/pipelined/tests/app/: BUILD.bazel
lte/gateway/python/magma/pipelined/tests/snapshots/: test_access_control.AccessControlTestLocalIpBlockLTEIpV6.test_blocking_ip_match.snapshot
lte/gateway/python/magma/redirectd/: BUILD.bazel
lte/protos/: BUILD.bazel
lte/protos/oai/: nas_state.proto
orc8r/gateway/python/magma/common/: BUILD.bazel
orc8r/gateway/python/magma/common/redis/: BUILD.bazel
orc8r/gateway/python/magma/magmad/check/: BUILD.bazel
orc8r/protos/: BUILD.bazel
orc8r/tools/ansible/roles/pkgrepo/tasks/: main.yml
