# Copyright 2022 The Magma Authors.

# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.

# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_python//python:defs.bzl", "py_library")
load("@python_deps//:requirements.bzl", "requirement")

package(default_visibility = ["//visibility:public"])

py_library(
    name = "qos",
    srcs = [
        "common.py",
        "qos_tc_impl.py",
        "tc_ops_pyroute2.py",
        "types.py",
        "qos_meter_impl.py",
        "utils.py",
        "tc_ops_cmd.py",
        "tc_ops.py",
    ],
    deps = [
        requirement("pyroute2"),
        "//lte/gateway/python/magma/pipelined/openflow:meters",
    ],
)
