# Copyright 2022 The Magma Authors.

# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.

# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("//bazel:python_test.bzl", "pytest_test")
load("@python_deps//:requirements.bzl", "requirement")

COMMON_TEST_DEPS = [
    requirement("pytest"),
    requirement("pytest-cov"),
    requirement("coverage-lcov"),
]

COMMON_TAGS = ["lte", "pipelined", "unittest"]

LTE_ROOT = "../../../../"
ORC8R_ROOT = LTE_ROOT + "../../../orc8r/gateway/python"

pytest_test(
    name = "test_msg_hub",
    srcs = ["test_msg_hub.py"],
    deps = COMMON_TEST_DEPS + [
        "//lte/gateway/python/magma/pipelined/openflow:messages",
        "//lte/gateway/python/magma/pipelined/openflow:exceptions",
        "//lte/gateway/python/magma/pipelined:metrics",
    ],
    tags = COMMON_TAGS,
    imports = [LTE_ROOT, ORC8R_ROOT],
)
