# Copyright 2022 The Magma Authors.

# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.

# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_python//python:defs.bzl", "py_library")

package(default_visibility = ["//visibility:public"])

py_library(
    name = "app",
    srcs = [
        "flow_query.py",
        "packet_builder.py",
        "subscriber.py",
        "packet_injector.py",
        "table_isolation.py",
        "start_pipelined.py",# TODO name suggests that this should be handled another way in bazel
        "exceptions.py",
    ],
    deps = [
        "//lte/gateway/python/integ_tests/s1aptests/ovs:constants",
        "//lte/gateway/python/integ_tests/s1aptests/ovs:rest_api",
        "//lte/gateway/python/magma/subscriberdb:sid",
        "//lte/gateway/python/magma/pipelined:internal_ip_allocator",
    ],
)
